envoy.yml
admin:
  address:
    socket_address: { address: 127.0.0.1, port_value: 9901 }

static_resources:
  listeners:
  - name: listener_http
    address:
      socket_address: { address: 127.0.0.1, port_value: 10000 }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          route_config:
            name: all_routes
            virtual_hosts:
            - name: minio_host
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route: { cluster: minio_cluster }
          # http_filters:
          # - name: envoy.filters.http.router
          #   typed_config:
          #     "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
  - name: minio_cluster
    connect_timeout: 0.25s #?? default 5s
    type: STRICT_DNS
    lb_policy: LEAST_REQUEST
    load_assignment:
      cluster_name: minio_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: minio1
                port_value: 9000
        - endpoint:
            address:
              socket_address:
                address: minio2
                port_value: 9000
                - endpoint:
            address:
              socket_address:
                address: minio1
                port_value: 9000
        - endpoint:
            address:
              socket_address:
                address: minio3
                port_value: 9000
        - endpoint:
            address:
              socket_address:
                address: minio4
                port_value: 9000
